Change 404 to 500 response get all weapons
